--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "server/server.js"
+    "start": "node server/server.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/gTambo/weekendSQL-to-to-list#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "moment": "^2.29.1",
     "pg": "^8.7.1"
   }
 }
